@@ -20,19 +20,25 @@ module Druid
         end
       end
 
+      #
+      # return the ListItem objects that are children of the
+      # UnOrderedList
+      #
+      def list_items
+        children.collect do |obj|
+          Druid::Elements::ListItem.new(obj)
+        end
+      end
+
       protected
 
       def child_xpath
-        ".//child::li"
+        "./child::li"
       end
 
       private
 
       def children
-        list_items.find_all { |item| item.parent == element}
-      end
-
-      def list_items
         element.uls(:xpath => child_xpath)
       end
     end
